// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content blanks 1`] = `
Array [
  "The weakest link in our mental model is ",
  <span
    className="bg-yellow-200"
  >
    ________________
  </span>,
  ". If we’re off -- even by a little -- it could have a big impact on this initiative because ",
  <span
    className="bg-yellow-200"
  >
    ________________
  </span>,
  ".",
]
`;

exports[`Content examples 1`] = `
Array [
  "The weakest link in our mental model is ",
  <span
    className="bg-green-200"
  >
    how we perceive user onboarding
  </span>,
  ". If we’re off -- even by a little -- it could have a big impact on this initiative because ",
  <span
    className="bg-green-200"
  >
    our projections might be off
  </span>,
  ".",
]
`;

exports[`Content input w/ prompts 1`] = `
Array [
  "The weakest link in our mental model is ",
  <span
    className="inline-flex flex-col leading-none"
    data-testid="input-container"
    onClick={[Function]}
  >
    <div
      className="self-center"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <input
        className=""
        data-testid="input"
        onChange={[Function]}
        placeholder="________________"
        style={
          Object {
            "boxSizing": "content-box",
            "width": "1px",
          }
        }
        value=""
      />
      <div
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "scroll",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }
      >
        
      </div>
      <div
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "scroll",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }
      >
        ________________
      </div>
    </div>
    <label
      className="self-center text-sm"
    >
      some assumption
    </label>
  </span>,
  ". If we’re off -- even by a little -- it could have a big impact on this initiative because ",
  <span
    className="inline-flex flex-col leading-none"
    data-testid="input-container"
    onClick={[Function]}
  >
    <div
      className="self-center"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <input
        className=""
        data-testid="input"
        onChange={[Function]}
        placeholder="________________"
        style={
          Object {
            "boxSizing": "content-box",
            "width": "1px",
          }
        }
        value=""
      />
      <div
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "scroll",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }
      >
        
      </div>
      <div
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "scroll",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }
      >
        ________________
      </div>
    </div>
    <label
      className="self-center text-sm"
    >
      reason
    </label>
  </span>,
  ".",
]
`;

exports[`Content input w/o prompts 1`] = `
Array [
  "The weakest link in our mental model is ",
  <span
    className="inline-flex flex-col leading-none"
    data-testid="input-container"
    onClick={[Function]}
  >
    <div
      className="self-center"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <input
        className=""
        data-testid="input"
        onChange={[Function]}
        placeholder="________________"
        style={
          Object {
            "boxSizing": "content-box",
            "width": "1px",
          }
        }
        value=""
      />
      <div
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "scroll",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }
      >
        
      </div>
      <div
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "scroll",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }
      >
        ________________
      </div>
    </div>
  </span>,
  ". If we’re off -- even by a little -- it could have a big impact on this initiative because ",
  <span
    className="inline-flex flex-col leading-none"
    data-testid="input-container"
    onClick={[Function]}
  >
    <div
      className="self-center"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <input
        className=""
        data-testid="input"
        onChange={[Function]}
        placeholder="________________"
        style={
          Object {
            "boxSizing": "content-box",
            "width": "1px",
          }
        }
        value=""
      />
      <div
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "scroll",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }
      >
        
      </div>
      <div
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "scroll",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }
      >
        ________________
      </div>
    </div>
  </span>,
  ".",
]
`;

exports[`Content prompts 1`] = `
Array [
  "The weakest link in our mental model is ",
  <span
    className="bg-blue-200"
  >
    some assumption
  </span>,
  ". If we’re off -- even by a little -- it could have a big impact on this initiative because ",
  <span
    className="bg-blue-200"
  >
    reason
  </span>,
  ".",
]
`;
